# media-analytics

./: .gitignore  CMakeLists.txt  README.md  README.rst
.github/workflows/: main.yml
assets/: demo-alive  demo-bash  demo-setup  hello-bash
assets/gva/: setup.py
doc/: docker.rst  gstreamer.rst  howto.rst  infostats.rst  open_vino_tools.rst
doc/man/: Makefile  ObjectClassification.asciidoc  ObjectDetection.asciidoc  SamplePipeline.asciidoc  demo-alive.asciidoc  demo-bash.asciidoc  demo-setup.asciidoc  demo.env.asciidoc  hello-bash.asciidoc  readme.rst
docker/: CMakeLists.txt
docker/devel/ubuntu20.04/: CMakeLists.txt
docker/devel/ubuntu20.04/intel-gfx/: Dockerfile  Dockerfile.local  Dockerfile.m4
docker/gst-gva/ubuntu20.04/: CMakeLists.txt
docker/gst-gva/ubuntu20.04/intel-gfx/: Dockerfile  Dockerfile.m4
docker/helpers/ubuntu20.04/intel-gfx/: Dockerfile
docker/va-samples/ubuntu20.04/: CMakeLists.txt
docker/va-samples/ubuntu20.04/intel-gfx/: Dockerfile  Dockerfile.m4
templates/: content.m4  defs.m4  gst-gva-sample.m4  intel-gfx-local.m4  manuals.m4  models.m4  open_model_zoo.m4  samples.m4  va_sample.m4
templates/m4docker/components/: dldt-ie.m4  gst-core.m4  gst-gva.m4  gst-plugins-base.m4  gst-vaapi.m4  intel-gfx.m4  opencv.m4
templates/m4docker/system/: begin.m4
va_sample/: CMakeLists.txt
va_sample/libs/: CMakeLists.txt
va_sample/libs/inference/: CMakeLists.txt  Inference.cpp  Inference.h  InferenceMobileSSD.cpp  InferenceMobileSSD.h  InferenceOV.cpp  InferenceOV.h  InferenceRCAN.cpp  InferenceRCAN.h  InferenceResnet50.cpp  InferenceResnet50.h  InferenceSISR.cpp  InferenceSISR.h  InferenceYOLO.cpp  InferenceYOLO.h
va_sample/src/: CMakeLists.txt
va_sample/src/common/: common.cpp  common.h  logs.cpp  logs.h  va_srcs.cmake
va_sample/src/execution/: Connector.cpp  Connector.h  ConnectorDispatch.cpp  ConnectorDispatch.h  ConnectorRR.cpp  ConnectorRR.h  DataPacket.cpp  DataPacket.h  ThreadBlock.cpp  ThreadBlock.h
va_sample/src/function/: CropThreadBlock.cpp  CropThreadBlock.h  DecodeThreadBlock.cpp  DecodeThreadBlock.h  DecodeThreadBlock2.cpp  DecodeThreadBlock2.h  DisplayThreadBlock.cpp  DisplayThreadBlock.h  EncodeThreadBlock.cpp  EncodeThreadBlock.h  InferenceThreadBlock.cpp  InferenceThreadBlock.h  MfxSessionMgr.cpp  MfxSessionMgr.h  Statistics.cpp  Statistics.h  va_srcs.cmake
va_sample/src/tests/: CMakeLists.txt  DecodeCrop_test.cpp  Decode_SR_Encode.cpp  InferenceOV_test.cpp  InferenceThreadBlock_test.cpp  ObjectClassification.cpp  ObjectDetection.cpp  SamplePipeline.cpp  SingleChannel_test.cpp
